Added providers for command classes